# seek-for-humanoid-server_deploy

./: .gitignore  README.md  pyproject.toml  requirements.txt
core/: settings.py  urls.py
humanoids/: apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
humanoids/management/commands/: pullhumanoids.py  s3push.py
humanoids/migrations/: 0001_initial.py
humanoids/tests/: mock_data.py  test_api.py  test_command.py
